<resources>
    <string name="app_name" translatable="false">Developers</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="add_new_developer">Add New Developer</string>
    <string name="developer_name">Developer Name</string>
    <string name="fresh">Fresh</string>
    <string name="junior">Junior</string>
    <string name="mid">Mid</string>
    <string name="senior">Senior</string>
    <string name="salary">Salary</string>
    <string name="bonus">Bonus</string>
    <string name="medical_insurance">Medical Insurance</string>
    <string name="social_insurance">Social Insurance</string>
    <string name="vacation">vacation</string>
    <string name="absence">Absence</string>
    <string name="add_developer">Add Developer</string>
    <string name="log_out">Log Out</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="i_don_t_have_an_account">I don\'t have an account</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="complete">Complete Your data</string>
    <string name="fresh_salary">Salary from 4000 - 7000</string>
    <string name="junior_salary">Salary from 7000 - 10000</string>
    <string name="mid_salary">Salary from 10000 - 15000</string>
    <string name="senior_salary">Salary from 15000 - 20000</string>
    <string name="success">success</string>
    <string name="delete">Developer Deleted Successfully</string>
    <string name="fr">Fresh</string>

</resources>